# Trader

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  BMAD.md  CLAUDE.md  DECISIONS.md  Dockerfile  KANBAN.md  LATTICE_Arbitrage_Quality_Intelligence_2026.xlsx  LATTICE_Story_Dashboard.html  Makefile  README.md  REPO_CONTEXT.md  Social_Arb_Data_Hub.html  build-frontend.sh  build_dashboard.py  crypto_scan_2026-03-11.md  crypto_scan_2026_03_11.py  crypto_scan_error.txt  crypto_scan_run.py  crypto_scan_temp.py  dashboard.html  docker-compose.yml  dropship-resubmit-2026-03-18.sh  dropship-scan-2026-03-11.md  dropship-scan-2026-03-12.md  dropship-scan-2026-03-13.md  dropship-scan-2026-03-17.md  dropship-scan-2026-03-18.json  dropship-scan-2026-03-20.json  dropship-scan-2026-03-21.json  dropship-scan-2026-03-22.json  dropship-scan-2026-03-25.json  dropship_invest.html  dropship_kpi.html  dropship_scan_2026-03-10.json  dropship_scan_2026-03-10.md  dropship_scan_2026-03-13.json  dropship_scan_2026-03-17.json  (+15 more)
data/: scan_2026-03-28.json
deploy/: cloud-run-service.yaml  cloudbuild.yaml
docs/: PRIVATE_COMPANY_AND_CRYPTO_EXTENSION.md
frontend/: index.html  package.json  vite.config.js
research/: INTEGRATION_FRAMEWORK.md
scripts/: deploy-gcp.sh  reset_password.py  run.sh  test-ci.sh
social_arb/: __init__.py  api_server.py  cli.py  config.py  export_dashboard_data.py  logging_config.py  pipeline.py  thesis_writer.py
social_arb_app/: index.html  lattice.html  notion.html  reasoning.html  trends.html
tests/: __init__.py  conftest.py  test_api_analysis.py  test_api_health.py  test_api_instruments.py  test_api_notebooks.py  test_api_reviews.py  test_api_schemas.py  (+28 more)
(+369 files in other folders)
